# lmake_cargo_toml_to_md

./: Cargo.toml  Makefile.toml  README.md  lmakeversionfromdate.json
docs/: aliases.js  index.html  search-index.js  settings.html  source-files.js
docs/implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
docs/implementors/core/ops/deref/: trait.Deref.js
docs/implementors/lazy_static/: trait.LazyStatic.js
docs/implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
docs/lmake_cargo_toml_to_md/: all.html  fn.cargo_toml_to_md.html  fn.utc_now.html  index.html  sidebar-items.js  struct.REGEX_AUTHORS.html  struct.REGEX_DESCRIPTION.html  struct.REGEX_MD_END.html  struct.REGEX_MD_START.html  struct.REGEX_REMOVE_EMAIL.html  struct.REGEX_VERSION.html
docs/src/lmake_cargo_toml_to_md/: lib.rs.html
src/: lib.rs
