[package]
name = "lmake_cargo_toml_to_md"
version = "2020.1209.1044"
authors = ["Luciano Bestia <luciano.bestia@gmail.com>"]
edition = "2018"
description = "Includes Cargo.toml data into md."
repository = "https://github.com/LucianoBestia/lmake_cargo_toml_to_md"
readme = "README.md"
license = "MIT"
keywords = ["rust", "make"]
categories = ["development-tools::build-utils"]
# publish as a cargo tool. Only this files.
publish = true
include = [
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "src/*",
]

[dependencies]
unwrap = "1.2.1"
clap = "2.33.3"
ansi_term = "0.12.1"
glob = "0.3.0"
regex = "1.4.2"
lazy_static="1.4.0"
chrono="0.4.19"
